# financial-analysis-agent

./: .env.example  .gitignore  CHANGELOG.md  README.md  app.py  main.py  models.txt  pyproject.toml  requirements.txt  ruff.toml  run.bat
.github/workflows/: ci.yml
.streamlit/: config.toml
src/: __init__.py  analyzer.py  collector.py  config.py  history.py  i18n.py  media_gen.py  newspaper.py  pipeline.py  sentiment.py  styles.py  utils.py  visualizer.py
src/components/: charts_view.py  history_view.py  newspaper_view.py  overview_dashboard.py  sentiment_dashboard.py
tests/: test_analyzer.py  test_collector_sources.py  test_history_manager.py  test_media_gen.py  test_newspaper.py  test_pipeline.py  test_sentiment.py  test_utils.py  test_visualizer.py
